--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-id-swiper": "^4.0.0",
     "react-instagram-embed": "^2.0.0",
     "react-static-tweets": "^0.4.0",
     "sass": "^1.32.8",
+    "swiper": "6.8.4",
     "theme-ui": "^0.6.1",
     "twitter-lite": "^1.1.0"
   },
